website/snap-backup.less
/* Live in Style -- Snap Backup */
/* Colors: teal, darkcyan, palegreen, yellow */

// Layout
body {
   margin: 0px;
   >header, main, body >footer {
      max-width: 800px;
      margin: 0px;
      }
   }

// Header
body {
   >header {
      padding-top: 30px;
      margin-bottom: 20px;
      }
   }
body >header .arch {
   position: absolute;
   top: 0px;
   left: 145px;                //set to "width" of "nav.hamburger-menu aside" minus 5px
   width: calc(100% - 145px);  //match px of "left"
   background-color: palegreen;
   z-index: -1000;
   }
body >header .arch >div {
   height: 200px;
   background-color: white;
   border: 4px solid teal;
   border-right: none;
   border-bottom: none;
   border-top-left-radius: 1000px;
   }
body >header >h1 {
   font-size: 3rem;
   text-align: right;
   }
body >header >aside {
   padding-top: 15px;
   }
body >header >aside a img {
   height: 96px;
   }

// Main
main >.wedge {
   float: left;
   width: 30px;
   height: 60px;
   shape-outside: polygon(0px 0px, 30px 0px, 0px 60px);
   }
main >section:first-child >p:first-child,
main >section:first-child >h2:first-child {
   text-indent: 2em;
   }
main >section >nav a {
   font-size: 0.9rem;
   color: teal;
   white-space: nowrap;
   }
main >section >nav a:hover {
   color: white;
   background-color: teal;
   }
main >section >nav a:not(:last-child)::after {
   display: inline-block;
   content: "|";
   font-size: 1.0rem;
   color: silver;
   background-color: white;
   padding: 0px 5px 0px 8px;
   }
main >section .language-flags img {
   width: 22px;
   }
main >section aside {
   max-width: none;
   }
main >section >aside figure {
   max-width: 200px;
   }
main >section figure.cake-layers {
   text-align: center;
   border: 1px solid darkgray;
   }
main >section figure.cake-layers figcaption {
   font-size: 1.4rem;
   font-weight: bold;
   color: white;
   background-color: darkgray;
   padding: 5px 0px;
   }
main >section figure.cake-layers figcaption span {
   font-size: 0.8rem;
   text-transform: uppercase;
   }
main >section figure.cake-layers >div {
   padding: 10px 10%;
   border-top: 1px solid darkgray;
   }
main >section figure.cake-layers >div a img {
   height: 20px;
   vertical-align: middle;
   padding-left: 5px;
   }
main >section cite {
   display: block;
   font-size: 0.8rem;
   font-style: normal;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   }
main >section .screenshot-icons {
   padding-top: 15px;
   margin-bottom: 30px;
   }
main >section .screenshot-icons a img {
   height: 20px;
   margin-left: 10px;
   }
main >section .screenshot-icons+figure figcaption {
   font-size: 1.2rem;
   font-weight: bold;
   }

// Footer
body >footer {
   font-size: 0.8rem;
   color: gray;
   padding: 10px;
   }

// Style
body.macos-mode {
   .for-non-macs {
      display: none;
      }
   }
body:not(.macos-mode) {
   .for-macs-only {
      display: none;
      }
   }

/* 3rd party */

/* Link colors */
a { border-color: teal; }
a:hover { background-color: teal; outline-color: teal; }

/* Flat button color */
button { background-color: teal; }
button:hover:not(:disabled), button:focus { background-color: lightseagreen; }

/* Reveal action color */
.reveal-button { color: teal; }
.reveal-button:hover { background-color: teal; }

/* HamburgerMenu ☰ Custom width and colors */
body {
   padding-right: 20px;         /* gutter on left and right sides of page */
   padding-left: 170px;         /* set to "padding-right" + "width"(aside) */
   }
nav.hamburger-menu aside {
   width: 150px;                /* menu width */
   }
nav.hamburger-menu {
   color: gainsboro;            /* menu font color */
   background-color: teal;      /* menu background color */
   }
nav.hamburger-menu aside ul li.current {
   border-color: white;         /* border color for selected menu item */
   }
nav.hamburger-menu aside ul li.current >span,
nav.hamburger-menu aside ul li.current >a,
nav.hamburger-menu aside ul li >span:hover,
nav.hamburger-menu aside ul li >a:hover {
   color: yellow;               /* menu font highlight color */
   background-color: darkcyan;  /* menu background highlight color */
   }

/******************************************************************************/

// Responsive design
.MobileMode({
   body >header {
      padding-top: 60px;
      }
   body >header .arch {
      left: -4px;
      width: calc(100% + 4px);
      }
   body >header >h1 {
      font-size: 1.6rem;
      }
   body main >section h2 {
      font-size: 1.3rem;
      }
   body main >section .indent {
      margin-left: 20px;
      }
   });
.MobileMode(@lessRules) {  //selects iPhone SE (3rd gen) landscape and anything narrower
   @media (max-width: 667px) { @lessRules(); }
   }

